Fixed additional layout issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,9 +42,9 @@ body {
     bottom: 5%;
   }
 
-  .vid-recorder,div[class*="timer__RecIcon"] {
+  /* .vid-recorder,div[class*="timer__RecIcon"] {
     margin-top: 15px;
-  }
+  } */
 
   .vid-recorder,div[class*="switch-camera-view"] {
     display: none;
